--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run download && npm run upload",
+    "start:local": "npm run download && npm run upload:local",
+    "download": "node index.js",
+    "upload": "node upload.js",
+    "upload:local": "node --env-file .env upload.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.588.0",
     "dayjs": "^1.11.11",
     "puppeteer": "^22.10.0"
   }
